--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,9 @@ services:
     ports:
       - "5000:5000"
       
+      mongo: 
+        image: mongo
+
+        ports :
+          -"27017:27017"
+      
