--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "EasyMeal",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.13"
+  },
+  "devDependencies": {},
   "scripts": {
-   // "test": "echo \"Error: no test specified\" && exit 1"
-   "start" : "node server.js",
-   "server":"nodemon"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +24,5 @@
   "bugs": {
     "url": "https://github.com/karimelgendy/EasyMeal/issues"
   },
-  "homepage": "https://github.com/karimelgendy/EasyMeal#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.7.13"
-  }
+  "homepage": "https://github.com/karimelgendy/EasyMeal#readme"
 }
