--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {},
   "scripts": {
